2009-10-07  John W. Eaton  <jwe@octave.org>

	* variables.cc (get_dims_str): New function.
	(symbol_info_list::display_line,
	symbol_info_list::parse_whos_line_format): Use it to get dims string.

2009-10-07  John W. Eaton  <jwe@octave.org>

	* ov.h (octave_value::get_count): Return octave_idx_type, not int.

2009-10-07  John W. Eaton  <jwe@octave.org>

	* pt-arg-list.cc (tree_argument_list::convert_to_const_vector):
	Avoid uninitialized variable warning.
	* pt-cbinop.cc (simplify_ldiv_op): Avoid unused parameter warning.
	* ov-flt-re-mat.cc (convert_to_str_internal):
	Update for octave_value constructor changes.

2009-10-07  Jaroslav Hajek  <highegg@gmail.com>

	* oct-stream.cc (octave_base_stream::skipl,
	octave_stream::skipl (long, ...), octave_stream::skipl (const
	octave_value&, ...)): New methods.
	* oct-stream.h: Declare them.
	* file-io.cc (Ffskipl): New DEFUN.

2009-10-07  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-str-str.cc (DEFUNOP (transpose, char_matrix_str)):
	Update for octave_value constructor changes.

2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::assign): Do not gripe "assignment failed" if
	already griped about the binary operation.

2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* pt-idx.cc (tree_index_expression::rvalue): When evaluating index
	chain, split on chaining ()() and (){}.

2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* pt-misc.cc (tree_argument_list::convert_to_const_vector):
	Return more than nargout arguments only unless undefined elements
	occur.
	* ov-class.cc (octave_class::subsref): Pack return list from
	overloaded method into first value.

2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* ov-ch-mat.h (octave_char_matrix): Don't declare allocator and
	typeid.
	* ov-ch-mat.cc: Don't define them.
	* ov.cc (install_types): Don't register octave_char_matrix.

2009-10-05  John W. Eaton  <jwe@octave.org>

	* ov.h (octave_value (const charMatrix&, char, bool),